# ssg

./: .gitignore  Cargo.toml  README.md
blog/: index.md
blog/b/: index.md
lib/: Cargo.toml
lib/src/: context.rs  frontmatter.rs  lib.rs  markdown.rs  template.rs
lib/src/plugin/: jsonfeed.rs  math.rs  mod.rs  pipeline.rs  reading_time.rs  syntax_highlighting.rs  tags.rs  toc.rs
templates/: test.tera
