[package]
name = "lib"
version = "0.1.0"
edition = "2024"

[dependencies]
markdown = { version = "1.0", features = ["serde"] }
mdast_util_to_markdown = "0.0.2"
markdown-frontmatter = { version = "0.4.0", features = ["toml", "yaml", "json"] }
tera = { git = "https://github.com/Keats/tera2", version = "2", features = ["fast", "glob_fs"] }
tera-contrib = { git = "https://github.com/Keats/tera2", version = "0.1", features = ["date", "urlencode", "json", "filesize_format", "format", "slug", "rand", "regex"] }
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
jiff = { version = "0.2.17", features = ["serde"] }
arborium = { version = "2.4.7", default-features = false, features = ["lang-rust", "lang-python", "lang-javascript", "lang-typescript", "lang-html"] }
math-core = "0.1"